--- a/report/report.tex
+++ b/report/report.tex
@@ -62,8 +62,9 @@
 
 
 \input{chapters/introduction}
-\input{chapters/couple_three_MBS}
+\input{chapters/trijunction}
 \input{chapters/electrostatics}
+\input{chapters/conclusions}
 
 
 %% Use letters for the chapter numbers of the appendices.
