report with chapters 1 and 2

--- a/report/report.tex
+++ b/report/report.tex
@@ -7,6 +7,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{amssymb}
+\usepackage{graphicx}
 \usepackage{physics}
 \usepackage[utf8]{inputenc}
 \DeclareMathAlphabet{\mathcal}{OMS}{cmsy}{m}{n}
