--- a/report/report.tex
+++ b/report/report.tex
@@ -41,7 +41,7 @@
 %\makecover
 
 %% Uncomment following 16 lines for a cover with a picture on the lower half only
-\title[tudelft-black]{Design of a trijunction of Majorana nanowires}
+\title[tudelft-black]{Design of a high-quality multi-terminal semiconductor switch}
 %\subtitle[tudelft-black]{Optional subtitle}
 \author[tudelft-black]{Juan Daniel Torres Luna}
 \affiliation{Technische Universiteit Delft}
