--- a/analysis/gates_geometries.ipynb
+++ b/analysis/gates_geometries.ipynb
@@ -668,6 +668,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "94d563b0-c9ab-40f8-bb33-ef8b3b2f3e34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width/np.sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 466,
    "id": "0f484440-ca11-4bda-a0c7-e1e1ce7ea5e8",
    "metadata": {},
