--- a/analysis/tutorial_geometry.ipynb
+++ b/analysis/tutorial_geometry.ipynb
@@ -1054,7 +1054,7 @@
    "source": [
     "```python\n",
     "def gate_potential(\n",
-    "    discrete_system, linear_problem, site_coords, site_indices, voltages, charges, offset, grid_spacing=1\n",
+    "    discrete_system, linear_problem, site_coords, site_indices, voltages, charges, offset = 0, grid_spacing=1\n",
     "):\n",
     "    solution = _linear_solution(discrete_system, linear_problem, voltages, charges)\n",
     "\n",
