remove obsolete arguments

--- a/analysis/tutorial_geometry.ipynb
+++ b/analysis/tutorial_geometry.ipynb
@@ -219,7 +219,7 @@
     "\n",
     "n = 6  # number of eigenvalues\n",
     "mu = pm.bands[0]  # lowest band\n",
-    "base_params = pm.junction_parameters(m_nw=[mu, mu, mu], m_qd=1e-3)\n",
+    "base_params = pm.junction_parameters(m_nw=[mu, mu, mu])\n",
     "\n",
     "# Define solver\n",
     "solver = sl.general_solver(geometries=[[trijunction, f_params]],\n",
@@ -248,7 +248,7 @@
    "source": [
     "# Generate paramters for the calculation in dask_bag format\n",
     "phis = np.linspace(0, 2, 100)\n",
-    "args = list(it.product([0], pm.phase_params(offset=center)))\n",
+    "args = list(it.product([0], pm.phase_params())\n",
     "args_db = db.from_sequence(args)"
    ]
   },
