add submodule spin-qubit

--- a/analysis/Y.ipynb
+++ b/analysis/Y.ipynb
@@ -2,24 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 260,
    "id": "21c76eab-e8f2-4222-80a7-36d75ac9b5bf",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "VoronoiMesh version 0.1\n",
-      "DiscretePoisson version 0.3\n",
-      "Shape version: 0.1\n",
-      "SystEquations version: 0.3\n",
-      "Solver version 0.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## popular python packages\n",
     "import numpy as np\n",
@@ -42,7 +30,7 @@
     "import parameters\n",
     "import tools as tl\n",
     "\n",
-    "sys.path.append(\"/home/tinkerer/spin-qubit/\")\n",
+    "sys.path.append(os.path.join(ROOT_DIR + '/spin-qubit/'))\n",
     "from Hamiltonian import discrete_system_coordinates"
    ]
   },
