optimize phase and voltage together

--- a/analysis/Y.ipynb
+++ b/analysis/Y.ipynb
@@ -85,14 +85,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "09cc3291-1fc7-4f04-9064-dbdc5f2d4731",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "cac3de85-5125-4913-9180-bf4fd6e12aa0",
    "metadata": {},
@@ -216,8 +208,29 @@
       "Done calculating surface\n",
       "Done calculating distance\n",
       "Done calculating capacitance matrix\n",
-      "CPU times: user 1min 15s, sys: 4.02 s, total: 1min 19s\n",
-      "Wall time: 1min 19s\n"
+      "Finding linear part of the tight-binding Hamiltonian\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 13/13 [00:08<00:00,  1.46it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'potential'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:1\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "File \u001b[0;32m~/trijunction-design/code/optimization.py:240\u001b[0m, in \u001b[0;36mOptimize.changeconfig\u001b[0;34m(self, change_config, poisson_system)\u001b[0m\n\u001b[1;32m    231\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mchangeconfig\u001b[39m(\u001b[38;5;28mself\u001b[39m, change_config, poisson_system \u001b[38;5;241m=\u001b[39m []):\n\u001b[1;32m    232\u001b[0m     (\n\u001b[1;32m    233\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig,\n\u001b[1;32m    234\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboundaries,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    238\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig, change_config\u001b[38;5;241m=\u001b[39mchange_config, poisson_system \u001b[38;5;241m=\u001b[39m poisson_system\n\u001b[1;32m    239\u001b[0m     )\n\u001b[0;32m--> 240\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_params\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    242\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboundaries, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpoisson_system, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlinear_problem\n",
+      "File \u001b[0;32m~/trijunction-design/code/optimization.py:202\u001b[0m, in \u001b[0;36mOptimize.set_params\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    199\u001b[0m kwant_params \u001b[38;5;241m=\u001b[39m parameters\u001b[38;5;241m.\u001b[39mjunction_parameters(m_nw\u001b[38;5;241m=\u001b[39m[mu, mu, mu])\n\u001b[1;32m    200\u001b[0m kwant_params \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwant_params, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mlinear_terms}\n\u001b[0;32m--> 202\u001b[0m numerical_hamiltonian \u001b[38;5;241m=\u001b[39m \u001b[43mhamiltonian\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrijunction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    203\u001b[0m \u001b[43m                                    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvoltages\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    204\u001b[0m \u001b[43m                                    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    205\u001b[0m \u001b[43m                                    \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwant_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    206\u001b[0m \u001b[43m                                    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    207\u001b[0m eigval, eigvec \u001b[38;5;241m=\u001b[39m eigsh(\n\u001b[1;32m    208\u001b[0m     numerical_hamiltonian,\n\u001b[1;32m    209\u001b[0m     \u001b[38;5;241m6\u001b[39m,\n\u001b[1;32m    210\u001b[0m     sigma\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m,\n\u001b[1;32m    211\u001b[0m     return_eigenvectors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    212\u001b[0m     )\n\u001b[1;32m    215\u001b[0m lowest_e_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margsort(np\u001b[38;5;241m.\u001b[39mabs(eigval))\n",
+      "File \u001b[0;32m~/trijunction-design/code/optimization.py:878\u001b[0m, in \u001b[0;36mhamiltonian\u001b[0;34m(kwant_system, linear_coefficients, params_fn, **params)\u001b[0m\n\u001b[1;32m    866\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mhamiltonian\u001b[39m(\n\u001b[1;32m    867\u001b[0m     kwant_system, \n\u001b[1;32m    868\u001b[0m     linear_coefficients: \u001b[38;5;28mdict\u001b[39m,\n\u001b[1;32m    869\u001b[0m     params_fn: callable,\n\u001b[1;32m    870\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams, \n\u001b[1;32m    871\u001b[0m ):\n\u001b[1;32m    872\u001b[0m     summed_ham \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\n\u001b[1;32m    873\u001b[0m         [linear_coefficients[key] \u001b[38;5;241m*\u001b[39m params[key] \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m linear_coefficients\u001b[38;5;241m.\u001b[39mitems()]\n\u001b[1;32m    874\u001b[0m     )\n\u001b[1;32m    876\u001b[0m     base_ham \u001b[38;5;241m=\u001b[39m kwant_system\u001b[38;5;241m.\u001b[39mhamiltonian_submatrix(\n\u001b[1;32m    877\u001b[0m         sparse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m--> 878\u001b[0m         params\u001b[38;5;241m=\u001b[39m\u001b[43mparams_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    879\u001b[0m     )\n\u001b[1;32m    881\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m base_ham \u001b[38;5;241m+\u001b[39m summed_ham\n",
+      "File \u001b[0;32m~/trijunction-design/code/finite_system.py:88\u001b[0m, in \u001b[0;36mfinite_system.<locals>.f_params\u001b[0;34m(**params)\u001b[0m\n\u001b[1;32m     86\u001b[0m phi1 \u001b[38;5;241m=\u001b[39m params\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mphi1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     87\u001b[0m phi2 \u001b[38;5;241m=\u001b[39m params\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mphi2\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 88\u001b[0m potential \u001b[38;5;241m=\u001b[39m \u001b[43mparams\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpotential\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     89\u001b[0m f_chemical_potential \u001b[38;5;241m=\u001b[39m fill_system(\n\u001b[1;32m     90\u001b[0m     scattering_potential\u001b[38;5;241m=\u001b[39mpotential, mus_nw\u001b[38;5;241m=\u001b[39mmus_nw\n\u001b[1;32m     91\u001b[0m )\n\u001b[1;32m     92\u001b[0m f_Delta_re \u001b[38;5;241m=\u001b[39m wires(mu\u001b[38;5;241m=\u001b[39mDelta \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m, np\u001b[38;5;241m.\u001b[39mcos(phi1), np\u001b[38;5;241m.\u001b[39mcos(phi2)]))\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'potential'"
      ]
     }
    ],
@@ -309,10 +322,6 @@
    "execution_count": 15,
    "id": "c3b8b002-16dc-4723-b5e0-046be742c163",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -349,6 +358,17 @@
     "optimal_phis[\"left-right\"] = [max_phis[2] * np.pi, 0]\n",
     "optimal_phis[\"left-top\"] = [max_phis[1] * np.pi, 0]\n",
     "optimal_phis[\"right-top\"] = [0, max_phis[0] * np.pi]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "a4b2f0f1-21ff-4e12-9033-5b3b430ae24c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = parameters.bands[0]\n",
+    "param = parameters.junction_parameters(m_nw=[mu, mu, mu], m_qd=0)"
    ]
   },
   {
@@ -412,10 +432,6 @@
    "execution_count": 16,
    "id": "77f761e8-cc68-45c3-9e9a-aac9fbc5caa8",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
